--- a/raydio103/raydio103.ioc
+++ b/raydio103/raydio103.ioc
@@ -160,27 +160,27 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
-RCC.ADCFreqValue=12000000
-RCC.ADCPresc=RCC_ADCPCLK2_DIV6
-RCC.AHBFreq_Value=72000000
+RCC.ADCFreqValue=32000000
+RCC.ADCPresc=RCC_ADCPCLK2_DIV4
+RCC.AHBFreq_Value=128000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=36000000
-RCC.APB1TimFreq_Value=72000000
-RCC.APB2Freq_Value=72000000
-RCC.APB2TimFreq_Value=72000000
-RCC.FCLKCortexFreq_Value=72000000
+RCC.APB1Freq_Value=64000000
+RCC.APB1TimFreq_Value=128000000
+RCC.APB2Freq_Value=128000000
+RCC.APB2TimFreq_Value=128000000
+RCC.FCLKCortexFreq_Value=128000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=72000000
+RCC.HCLKFreq_Value=128000000
 RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=72000000
-RCC.PLLCLKFreq_Value=72000000
-RCC.PLLMCOFreq_Value=36000000
-RCC.PLLMUL=RCC_PLL_MUL9
+RCC.MCOFreq_Value=128000000
+RCC.PLLCLKFreq_Value=128000000
+RCC.PLLMCOFreq_Value=64000000
+RCC.PLLMUL=RCC_PLL_MUL16
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.SYSCLKFreq_VALUE=72000000
+RCC.SYSCLKFreq_VALUE=128000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=72000000
-RCC.USBFreq_Value=48000000
+RCC.TimSysFreq_Value=128000000
+RCC.USBFreq_Value=85333333.33333333
 RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
@@ -189,10 +189,10 @@ SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=562.5 KBits/s
+SPI1.CalculateBaudRate=500.0 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
@@ -202,7 +202,7 @@ TIM1.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
 TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM1.IPParameters=Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Channel-PWM Generation3 CH3,Pulse-PWM Generation3 CH3,Channel-PWM Generation2 No Output,Pulse-PWM Generation2 No Output,AutoReloadPreload,ClockDivision
-TIM1.Period=1024-1
+TIM1.Period=2048-1
 TIM1.Prescaler=2-1
 TIM1.Pulse-PWM\ Generation2\ No\ Output=1
 TIM1.Pulse-PWM\ Generation3\ CH3=0
