--- a/raydio103/raydio103.ioc
+++ b/raydio103/raydio103.ioc
@@ -103,30 +103,31 @@ Mcu.Pin18=PA9
 Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PA11
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PB3
-Mcu.Pin24=PB4
-Mcu.Pin25=PB5
-Mcu.Pin26=PB6
-Mcu.Pin27=PB7
-Mcu.Pin28=PB8
-Mcu.Pin29=PB9
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB6
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM1_VS_no_output2
-Mcu.Pin33=VP_TIM2_VS_ControllerModeTrigger
-Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin36=VP_TIM2_VS_no_output2
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM1_VS_no_output2
+Mcu.Pin34=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin37=VP_TIM2_VS_no_output2
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=37
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -161,6 +162,13 @@ PA10.Signal=S_TIM1_CH3
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=TX_Q_PWM
 PA11.Signal=S_TIM1_CH4
+PA12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
+PA12.GPIO_Label=PIN_LCD_CS_2
+PA12.GPIO_PuPd=GPIO_PULLUP
+PA12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA12.Locked=true
+PA12.PinState=GPIO_PIN_RESET
+PA12.Signal=GPIO_Output
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -297,10 +305,10 @@ SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=1000.0 KBits/s
+SPI1.CalculateBaudRate=500.0 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
