--- a/raydio103/raydio103.ioc
+++ b/raydio103/raydio103.ioc
@@ -1,17 +1,27 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-14\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-15\#ChannelInjectedConversion=ADC_CHANNEL_6
+ADC1.Channel-16\#ChannelInjectedConversion=ADC_CHANNEL_7
 ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DiscontinuousConvMode=DISABLE
-ADC1.EnableInjectedConversion=DISABLE
+ADC1.EnableInjectedConversion=ENABLE
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC2
-ADC1.IPParameters=EnableInjectedConversion,ContinuousConvMode,EnableRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,NbrOfConversion,DiscontinuousConvMode,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,master
+ADC1.IPParameters=EnableInjectedConversion,ContinuousConvMode,EnableRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,NbrOfConversion,DiscontinuousConvMode,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,InjectedRank-15\#ChannelInjectedConversion,Channel-15\#ChannelInjectedConversion,SamplingTime-15\#ChannelInjectedConversion,InjectedOffset-15\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode,master,InjectedRank-16\#ChannelInjectedConversion,Channel-16\#ChannelInjectedConversion,SamplingTime-16\#ChannelInjectedConversion,InjectedOffset-16\#ChannelInjectedConversion
+ADC1.InjNumberOfConversion=2
+ADC1.InjectedConvMode=AutoInjected
+ADC1.InjectedOffset-15\#ChannelInjectedConversion=0
+ADC1.InjectedOffset-16\#ChannelInjectedConversion=0
+ADC1.InjectedRank-15\#ChannelInjectedConversion=1
+ADC1.InjectedRank-16\#ChannelInjectedConversion=2
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-14\#ChannelRegularConversion=2
 ADC1.Rank-9\#ChannelRegularConversion=1
 ADC1.SamplingTime-14\#ChannelRegularConversion=ADC_SAMPLETIME_71CYCLES_5
+ADC1.SamplingTime-15\#ChannelInjectedConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-16\#ChannelInjectedConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_71CYCLES_5
 ADC1.master=1
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
@@ -41,7 +51,7 @@ Dma.SPI1_TX.4.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_TX.4.Mode=DMA_NORMAL
 Dma.SPI1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.SPI1_TX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.4.Priority=DMA_PRIORITY_MEDIUM
 Dma.SPI1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.TIM1_CH1.3.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_CH1.3.Instance=DMA1_Channel2
@@ -95,9 +105,9 @@ Mcu.Pin10=PA5
 Mcu.Pin11=PA6
 Mcu.Pin12=PA7
 Mcu.Pin13=PB0
-Mcu.Pin14=PB1
-Mcu.Pin15=PB10
-Mcu.Pin16=PB11
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB15
 Mcu.Pin17=PA8
 Mcu.Pin18=PA9
 Mcu.Pin19=PA10
@@ -106,28 +116,29 @@ Mcu.Pin20=PA11
 Mcu.Pin21=PA12
 Mcu.Pin22=PA13
 Mcu.Pin23=PA14
-Mcu.Pin24=PB3
-Mcu.Pin25=PB4
-Mcu.Pin26=PB5
-Mcu.Pin27=PB6
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
+Mcu.Pin24=PA15
+Mcu.Pin25=PB3
+Mcu.Pin26=PB4
+Mcu.Pin27=PB5
+Mcu.Pin28=PB6
+Mcu.Pin29=PB7
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM1_VS_no_output2
-Mcu.Pin34=VP_TIM2_VS_ControllerModeTrigger
-Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin37=VP_TIM2_VS_no_output2
+Mcu.Pin30=PB8
+Mcu.Pin31=PB9
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin34=VP_TIM1_VS_no_output2
+Mcu.Pin35=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin38=VP_TIM2_VS_no_output2
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=38
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -173,6 +184,12 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA15.GPIO_Label=PIN_LCD_DC
+PA15.GPIO_PuPd=GPIO_PULLDOWN
+PA15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.Signal=ADCx_IN2
 PA3.Signal=ADCx_IN3
 PA4.GPIOParameters=GPIO_Label
@@ -181,11 +198,7 @@ PA4.Signal=ADCx_IN4
 PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=ADC_SWR_R
 PA5.Signal=ADCx_IN5
-PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=ADC_VIN
 PA6.Signal=ADCx_IN6
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=ADC_RESERVED
 PA7.Signal=ADCx_IN7
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=TX_Q_PWM
@@ -198,14 +211,12 @@ PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=PIN_LCD_CS
 PB0.Locked=true
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=PIN_LCD_DC
-PB1.Locked=true
-PB1.Signal=GPIO_Output
 PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI1_SCK
 PB4.Mode=Full_Duplex_Master
@@ -295,9 +306,9 @@ SH.ADCx_IN4.0=ADC2_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
 SH.ADCx_IN5.0=ADC2_IN5,IN5
 SH.ADCx_IN5.ConfNb=1
-SH.ADCx_IN6.0=ADC2_IN6,IN6
+SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.ConfNb=1
-SH.ADCx_IN7.0=ADC2_IN7,IN7
+SH.ADCx_IN7.0=ADC1_IN7,IN7
 SH.ADCx_IN7.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
@@ -305,10 +316,10 @@ SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
 SH.S_TIM1_CH4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
-SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
+SPI1.CLKPhase=SPI_PHASE_1EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
-SPI1.CalculateBaudRate=500.0 KBits/s
+SPI1.CalculateBaudRate=4.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
