--- a/raydio103/raydio103.ioc
+++ b/raydio103/raydio103.ioc
@@ -1,34 +1,35 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-14\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.Channel-15\#ChannelInjectedConversion=ADC_CHANNEL_6
-ADC1.Channel-16\#ChannelInjectedConversion=ADC_CHANNEL_7
+ADC1.Channel-15\#ChannelInjectedConversion=ADC_CHANNEL_4
+ADC1.Channel-16\#ChannelInjectedConversion=ADC_CHANNEL_5
+ADC1.Channel-17\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-18\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC1.Channel-9\#ChannelRegularConversion=ADC_CHANNEL_0
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EnableInjectedConversion=ENABLE
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC2
-ADC1.IPParameters=EnableInjectedConversion,ContinuousConvMode,EnableRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,NbrOfConversion,DiscontinuousConvMode,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,InjectedRank-15\#ChannelInjectedConversion,Channel-15\#ChannelInjectedConversion,SamplingTime-15\#ChannelInjectedConversion,InjectedOffset-15\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode,master,InjectedRank-16\#ChannelInjectedConversion,Channel-16\#ChannelInjectedConversion,SamplingTime-16\#ChannelInjectedConversion,InjectedOffset-16\#ChannelInjectedConversion
+ADC1.IPParameters=EnableInjectedConversion,ContinuousConvMode,EnableRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,NbrOfConversion,DiscontinuousConvMode,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,InjectedRank-15\#ChannelInjectedConversion,Channel-15\#ChannelInjectedConversion,SamplingTime-15\#ChannelInjectedConversion,InjectedOffset-15\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode,InjectedRank-16\#ChannelInjectedConversion,Channel-16\#ChannelInjectedConversion,SamplingTime-16\#ChannelInjectedConversion,InjectedOffset-16\#ChannelInjectedConversion,master,Rank-17\#ChannelRegularConversion,Channel-17\#ChannelRegularConversion,SamplingTime-17\#ChannelRegularConversion,Rank-18\#ChannelRegularConversion,Channel-18\#ChannelRegularConversion,SamplingTime-18\#ChannelRegularConversion
 ADC1.InjNumberOfConversion=2
 ADC1.InjectedConvMode=AutoInjected
 ADC1.InjectedOffset-15\#ChannelInjectedConversion=0
 ADC1.InjectedOffset-16\#ChannelInjectedConversion=0
 ADC1.InjectedRank-15\#ChannelInjectedConversion=1
 ADC1.InjectedRank-16\#ChannelInjectedConversion=2
-ADC1.NbrOfConversion=2
+ADC1.NbrOfConversion=4
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-14\#ChannelRegularConversion=2
+ADC1.Rank-17\#ChannelRegularConversion=3
+ADC1.Rank-18\#ChannelRegularConversion=4
 ADC1.Rank-9\#ChannelRegularConversion=1
 ADC1.SamplingTime-14\#ChannelRegularConversion=ADC_SAMPLETIME_71CYCLES_5
-ADC1.SamplingTime-15\#ChannelInjectedConversion=ADC_SAMPLETIME_1CYCLE_5
-ADC1.SamplingTime-16\#ChannelInjectedConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.SamplingTime-15\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES_5
+ADC1.SamplingTime-16\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES_5
+ADC1.SamplingTime-17\#ChannelRegularConversion=ADC_SAMPLETIME_71CYCLES_5
+ADC1.SamplingTime-18\#ChannelRegularConversion=ADC_SAMPLETIME_71CYCLES_5
 ADC1.SamplingTime-9\#ChannelRegularConversion=ADC_SAMPLETIME_71CYCLES_5
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
-ADC2.NbrOfConversionFlag=1
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
@@ -86,61 +87,58 @@ KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
-Mcu.IP1=ADC2
-Mcu.IP10=USART1
-Mcu.IP2=DMA
-Mcu.IP3=I2C2
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SPI1
-Mcu.IP7=SYS
-Mcu.IP8=TIM1
-Mcu.IP9=TIM2
-Mcu.IPNb=11
+Mcu.IP1=DMA
+Mcu.IP2=I2C2
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
+Mcu.IP8=TIM2
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
-Mcu.Pin11=PA6
-Mcu.Pin12=PA7
-Mcu.Pin13=PB0
-Mcu.Pin14=PB10
-Mcu.Pin15=PB11
-Mcu.Pin16=PB15
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin11=PB0
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PB15
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PA15
-Mcu.Pin25=PB3
-Mcu.Pin26=PB4
-Mcu.Pin27=PB5
-Mcu.Pin28=PB6
-Mcu.Pin29=PB7
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PA15
+Mcu.Pin23=PB3
+Mcu.Pin24=PB4
+Mcu.Pin25=PB5
+Mcu.Pin26=PB6
+Mcu.Pin27=PB7
+Mcu.Pin28=PB8
+Mcu.Pin29=PB9
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=PB8
-Mcu.Pin31=PB9
-Mcu.Pin32=VP_SYS_VS_Systick
-Mcu.Pin33=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM1_VS_no_output2
-Mcu.Pin35=VP_TIM2_VS_ControllerModeTrigger
-Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin38=VP_TIM2_VS_no_output2
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM1_VS_no_output2
+Mcu.Pin33=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin34=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin36=VP_TIM2_VS_no_output2
 Mcu.Pin4=PD1-OSC_OUT
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=39
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=
+Mcu.UserConstants=ADC_TIM_PERIOD,(1024-1)
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
@@ -192,14 +190,8 @@ PA15.Locked=true
 PA15.Signal=GPIO_Output
 PA2.Signal=ADCx_IN2
 PA3.Signal=ADCx_IN3
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=ADC_SWR_F
 PA4.Signal=ADCx_IN4
-PA5.GPIOParameters=GPIO_Label
-PA5.GPIO_Label=ADC_SWR_R
 PA5.Signal=ADCx_IN5
-PA6.Signal=ADCx_IN6
-PA7.Signal=ADCx_IN7
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=TX_Q_PWM
 PA8.Signal=S_TIM1_CH1
@@ -256,7 +248,7 @@ ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -267,11 +259,11 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=raydio103.ioc
 ProjectManager.ProjectName=raydio103
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x200
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_ADC2_Init-ADC2-false-HAL-true,10-MX_I2C2_Init-I2C2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_I2C2_Init-I2C2-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
 RCC.AHBFreq_Value=128000000
@@ -298,18 +290,14 @@ SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
-SH.ADCx_IN2.0=ADC2_IN2,IN2
+SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
-SH.ADCx_IN3.0=ADC2_IN3,IN3
+SH.ADCx_IN3.0=ADC1_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
-SH.ADCx_IN4.0=ADC2_IN4,IN4
+SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
-SH.ADCx_IN5.0=ADC2_IN5,IN5
+SH.ADCx_IN5.0=ADC1_IN5,IN5
 SH.ADCx_IN5.ConfNb=1
-SH.ADCx_IN6.0=ADC1_IN6,IN6
-SH.ADCx_IN6.ConfNb=1
-SH.ADCx_IN7.0=ADC1_IN7,IN7
-SH.ADCx_IN7.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
@@ -331,7 +319,7 @@ TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
 TIM1.IPParameters=Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Channel-PWM Generation3 CH3,Pulse-PWM Generation3 CH3,AutoReloadPreload,ClockDivision,Channel-PWM Generation4 CH4,Channel-PWM Generation1 CH1,Channel-PWM Generation2 No Output,Pulse-PWM Generation2 No Output
-TIM1.Period=2048-1
+TIM1.Period=ADC_TIM_PERIOD-1
 TIM1.Prescaler=2-1
 TIM1.Pulse-PWM\ Generation2\ No\ Output=1
 TIM1.Pulse-PWM\ Generation3\ CH3=0
@@ -339,7 +327,7 @@ TIM1.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
 TIM1.TIM_MasterSlaveMode=TIM_MASTERSLAVEMODE_DISABLE
 TIM2.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
 TIM2.IPParameters=Channel-PWM Generation2 No Output,Prescaler,Period,TIM_MasterSlaveMode,TIM_MasterOutputTrigger,Pulse-PWM Generation2 No Output
-TIM2.Period=2048-1
+TIM2.Period=ADC_TIM_PERIOD-1
 TIM2.Prescaler=2-1
 TIM2.Pulse-PWM\ Generation2\ No\ Output=1
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_ENABLE
