--- a/raydio103/raydio103 — копия (2).ioc
+++ b/raydio103/raydio103 — копия (2).ioc
@@ -10,7 +10,7 @@ ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EnableInjectedConversion=ENABLE
 ADC1.EnableRegularConversion=ENABLE
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC2
-ADC1.IPParameters=EnableInjectedConversion,ContinuousConvMode,EnableRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,NbrOfConversion,DiscontinuousConvMode,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,InjectedRank-15\#ChannelInjectedConversion,Channel-15\#ChannelInjectedConversion,SamplingTime-15\#ChannelInjectedConversion,InjectedOffset-15\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode,InjectedRank-16\#ChannelInjectedConversion,Channel-16\#ChannelInjectedConversion,SamplingTime-16\#ChannelInjectedConversion,InjectedOffset-16\#ChannelInjectedConversion,master,Rank-17\#ChannelRegularConversion,Channel-17\#ChannelRegularConversion,SamplingTime-17\#ChannelRegularConversion,Rank-18\#ChannelRegularConversion,Channel-18\#ChannelRegularConversion,SamplingTime-18\#ChannelRegularConversion
+ADC1.IPParameters=EnableInjectedConversion,ContinuousConvMode,EnableRegularConversion,Rank-9\#ChannelRegularConversion,Channel-9\#ChannelRegularConversion,SamplingTime-9\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,NbrOfConversion,DiscontinuousConvMode,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,InjectedRank-15\#ChannelInjectedConversion,Channel-15\#ChannelInjectedConversion,SamplingTime-15\#ChannelInjectedConversion,InjectedOffset-15\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode,InjectedRank-16\#ChannelInjectedConversion,Channel-16\#ChannelInjectedConversion,SamplingTime-16\#ChannelInjectedConversion,InjectedOffset-16\#ChannelInjectedConversion,Rank-17\#ChannelRegularConversion,Channel-17\#ChannelRegularConversion,SamplingTime-17\#ChannelRegularConversion,Rank-18\#ChannelRegularConversion,Channel-18\#ChannelRegularConversion,SamplingTime-18\#ChannelRegularConversion,master
 ADC1.InjNumberOfConversion=2
 ADC1.InjectedConvMode=AutoInjected
 ADC1.InjectedOffset-15\#ChannelInjectedConversion=0
@@ -104,44 +104,47 @@ Mcu.Package=LQFP48
 Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
-Mcu.Pin11=PB10
-Mcu.Pin12=PB11
-Mcu.Pin13=PB15
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PB2
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB15
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA14
-Mcu.Pin21=PA15
-Mcu.Pin22=PB3
-Mcu.Pin23=PB4
-Mcu.Pin24=PB5
-Mcu.Pin25=PB6
-Mcu.Pin26=PB7
-Mcu.Pin27=PB8
-Mcu.Pin28=PB9
-Mcu.Pin29=VP_CRC_VS_CRC
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PA15
+Mcu.Pin25=PB3
+Mcu.Pin26=PB4
+Mcu.Pin27=PB5
+Mcu.Pin28=PB6
+Mcu.Pin29=PB7
 Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=VP_RTC_VS_RTC_Activate
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM1_VS_no_output2
-Mcu.Pin34=VP_TIM2_VS_ControllerModeTrigger
-Mcu.Pin35=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin36=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin37=VP_TIM2_VS_no_output2
+Mcu.Pin30=PB8
+Mcu.Pin31=PB9
+Mcu.Pin32=VP_CRC_VS_CRC
+Mcu.Pin33=VP_RTC_VS_RTC_Activate
+Mcu.Pin34=VP_SYS_VS_Systick
+Mcu.Pin35=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM1_VS_no_output2
+Mcu.Pin37=VP_TIM2_VS_ControllerModeTrigger
+Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin4=PD1-OSC_OUT
+Mcu.Pin40=VP_TIM2_VS_no_output2
 Mcu.Pin5=PA0-WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA4
-Mcu.PinsNb=38
+Mcu.PinsNb=41
 Mcu.ThirdPartyNb=0
-Mcu.UserConstants=ADC_TIM_PERIOD,(1024-1);ADC_TIM_PSC,(1-1)
+Mcu.UserConstants=ADC_TIM_PSC,(2-1);ADC_TIM_PERIOD,(2048-1)
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
@@ -195,6 +198,10 @@ PA2.Signal=ADCx_IN2
 PA3.Signal=ADCx_IN3
 PA4.Signal=ADCx_IN4
 PA5.Signal=ADCx_IN5
+PA6.Locked=true
+PA6.Signal=ADCx_IN6
+PA7.Locked=true
+PA7.Signal=ADCx_IN7
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=TX_Q_PWM
 PA8.Signal=S_TIM1_CH1
@@ -208,6 +215,10 @@ PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB2.GPIOParameters=GPIO_Label
+PB2.GPIO_Label=NOT_ON_BOARD
+PB2.Locked=true
+PB2.Signal=GPIO_Output
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI1_SCK
 PB4.Mode=Full_Duplex_Master
@@ -247,7 +258,7 @@ ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x800
+ProjectManager.HeapSize=0x400
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -258,7 +269,7 @@ ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=raydio103.ioc
 ProjectManager.ProjectName=raydio103
 ProjectManager.RegisterCallBack=
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x200
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
@@ -299,6 +310,10 @@ SH.ADCx_IN4.0=ADC1_IN4,IN4
 SH.ADCx_IN4.ConfNb=1
 SH.ADCx_IN5.0=ADC1_IN5,IN5
 SH.ADCx_IN5.ConfNb=1
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN7.0=ADC1_IN7,IN7
+SH.ADCx_IN7.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
